# beer_bot

./: CMakeLists.txt  README.md  package.xml
firmware/: arduino_driver.ino
launch/: remote_control.launch.py  slam_toolbox.launch.xml  static_transforms.launch.py
scripts/: run_motors_serial.py
src/: arduino_driver.cpp  joy_to_twist_node.cpp
